--- a/src/DataSiswa.form
+++ b/src/DataSiswa.form
@@ -126,7 +126,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="cmdHapus">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Hapus"/>
+        <Property name="text" type="java.lang.String" value="Hapus."/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmdHapusActionPerformed"/>
